--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -1,4 +1,5 @@
 @import "elements";
+@import "type";
 
 #progress {
   width:$screen-width-px;
@@ -14,7 +15,8 @@
   } 
 
 #howto {
-	margin-top:$screen-height-px;  
+	margin-top:$screen-height-px;
+	  
   .factoid {
     width: 300px;
     position: absolute;
@@ -33,11 +35,43 @@
   p {color:$story-color;}    
   } 
   
-#empty {;
+#empty {
   margin-top:$screen-height-px;  
   }
 
+  
+#mother {
+  margin-top:$screen-height-px;
+  }
+  
+#queen {
+  margin-top:$screen-height-px;
+  } 
+  
+#hunstman {
+  margin-top:$screen-height-px;
+  } 
+  
+#dwarves {
+  margin-top:$screen-height-px;
+  } 
+  
+#king {
+  margin-top:$screen-height-px;
+  } 
+  
+#sin {  
+  margin-top:$screen-height-px;
+  } 
+  
+#prince {
+  margin-top:$screen-height-px;
+  }
+  
+#love { 
+  margin-top:$screen-height-px;
+  }  
 
-#pageEnd {
-	margin-top:$screen-height-px;
+#end {  
+  margin-top:$screen-height-px;
   }
