--- a/styles/_type.scss
+++ b/styles/_type.scss
@@ -49,7 +49,7 @@ h1 {
 	margin: 0;
 	padding:25px;
 	color:rgba(0,255,0,1);
-	top:500px;
+	margin-top:500px;
 	-webkit-transform-origin:0 0;
 	-moz-transform-origin:0 0;
 	-ms-transform-origin:0 0;
@@ -61,6 +61,7 @@ h2 {
 	font-size:4em;
 	margin: 0;
 	padding:25px;
+  margin-top:500px;
 	-webkit-transform-origin:0 0;
 	-moz-transform-origin:0 0;
 	-ms-transform-origin:0 0;
@@ -72,6 +73,7 @@ h3 {
 	font-size:2em;
 	margin: 0;
 	padding:25px;
+  margin-top:500px;
 	-webkit-transform-origin:0 0;
 	-moz-transform-origin:0 0;
 	-ms-transform-origin:0 0;
