--- a/styles/main-slow.css
+++ b/styles/main-slow.css
@@ -463,6 +463,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/* apply a natural box layout model to all elements */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 html {
   background-color: #000; }
 
@@ -547,6 +553,77 @@ body {
 .front {
   z-index: 50 !important; }
 
+/***********************************************************************************************************/
+/*** Begin Type Styles  ************************************************************************************/
+/***********************************************************************************************************/
+html, body, div, span, p, a, del, em, img, ol, ul, li, fieldset, form, label {
+  font-size: 100%;
+  vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-family: "Helvetica Neue", Helvetica, Arial, serif;
+  text-align: left;
+  color: black; }
+
+ol, ul {
+  list-style: none; }
+
+.button .closed p {
+  text-align: center;
+  margin: 30px;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px; }
+
+p {
+  font-family: "Arnhem", Georgia, serif;
+  color: black;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.25;
+  margin-bottom: 24px; }
+
+q {
+  font-style: italic;
+  color: #333; }
+
+h1 {
+  font-size: 12em;
+  margin: 0;
+  padding: 25px;
+  color: lime;
+  margin-top: 500px;
+  -webkit-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  -o-transform-origin: 0 0;
+  transform-origin: 0 0; }
+
+h2 {
+  font-size: 4em;
+  margin: 0;
+  padding: 25px;
+  margin-top: 500px;
+  -webkit-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  -o-transform-origin: 0 0;
+  transform-origin: 0 0; }
+
+h3 {
+  font-size: 2em;
+  margin: 0;
+  padding: 25px;
+  margin-top: 500px;
+  -webkit-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  -o-transform-origin: 0 0;
+  transform-origin: 0 0; }
+
+/*** End Type Styles ********************************************************/
 #progress {
   width: 768px;
   height: 6px;
@@ -577,7 +654,31 @@ body {
 #empty {
   margin-top: 1024px; }
 
-#pageEnd {
+#mother {
+  margin-top: 1024px; }
+
+#queen {
+  margin-top: 1024px; }
+
+#hunstman {
+  margin-top: 1024px; }
+
+#dwarves {
+  margin-top: 1024px; }
+
+#king {
+  margin-top: 1024px; }
+
+#sin {
+  margin-top: 1024px; }
+
+#prince {
+  margin-top: 1024px; }
+
+#love {
+  margin-top: 1024px; }
+
+#end {
   margin-top: 1024px; }
 
 /***********************************************************************************************************/
@@ -621,7 +722,7 @@ h1 {
   margin: 0;
   padding: 25px;
   color: lime;
-  top: 500px;
+  margin-top: 500px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
   -ms-transform-origin: 0 0;
@@ -632,6 +733,7 @@ h2 {
   font-size: 4em;
   margin: 0;
   padding: 25px;
+  margin-top: 500px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
   -ms-transform-origin: 0 0;
@@ -642,6 +744,7 @@ h3 {
   font-size: 2em;
   margin: 0;
   padding: 25px;
+  margin-top: 500px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
   -ms-transform-origin: 0 0;
