--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -14,11 +14,11 @@ body {
 .page {
   width:$screen-width-px;
 	height:$page-height-px;		
+	background-color: $page-color-light;
 /*   border-bottom: 2px solid $page-divider;  */   	
 	}
 	
-.page:nth-child(odd) {background-color: $page-color-light;}
-.page:nth-child(even) {background-color: $page-color-dark;}
+.page:nth-child(odd) {border: 10px solid $page-color-dark;}
 	
 .jumpto {
   bottom:25px;
