--- a/styles/main.css
+++ b/styles/main.css
@@ -480,13 +480,11 @@ body {
 .page {
   width: 768px;
   height: 1024px;
+  background-color: white;
   /*   border-bottom: 2px solid $page-divider;  */ }
 
 .page:nth-child(odd) {
-  background-color: white; }
-
-.page:nth-child(even) {
-  background-color: #ebebeb; }
+  border: 10px solid #ebebeb; }
 
 .jumpto {
   bottom: 25px;
@@ -747,134 +745,110 @@ h3 {
 @-skrollr-keyframes last-bottom-to-top {
   21164 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   22064 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes eleven-bottom-to-top {
   19240 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   20140 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes ten-bottom-to-top {
   17316 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   18216 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes nine-bottom-to-top {
   15392 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   16292 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes eight-bottom-to-top {
   13468 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   14368 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes seven-bottom-to-top {
   11544 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   12444 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes six-bottom-to-top {
   9620 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   10520 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes five-bottom-to-top {
   7696 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   8596 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes four-bottom-to-top {
   5772 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   6672 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes three-bottom-to-top {
   3848 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   4748 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes two-bottom-to-top {
   1924 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   2824 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes one-bottom-to-top {
   0 {
     color: black;
-    margin-top: 500px;
-    top: 500px; }
+    margin-top: 500px; }
 
   900 {
     color: red;
-    margin-top: 500px;
-    top: 100px; } }
+    margin-top: 100px; } }
 
 @-skrollr-keyframes last-scroll {
   20140 {
