--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -11,7 +11,12 @@
 
 	
 #cover {
-  h1 {margin-top:100px}
+  h1 {
+    margin-top:0px;
+    margin-left:-30px;
+    }
+  background-color: $page-color-dark;
+  border: 0;
   } 
 
 #howto {
@@ -74,4 +79,6 @@
 
 #end {  
   margin-top:$screen-height-px;
+  background-color: $page-color-dark;
+  border: 0;
   }
