--- a/styles/main-slow2.css
+++ b/styles/main-slow2.css
@@ -589,7 +589,6 @@ h1 {
   font-size: 12em;
   margin: 0;
   padding: 25px;
-  color: lime;
   margin-top: 500px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
@@ -627,8 +626,12 @@ h3 {
   background: #ffc400;
   z-index: 200; }
 
-#cover h1 {
-  margin-top: 100px; }
+#cover {
+  background-color: #ebebeb;
+  border: 0; }
+  #cover h1 {
+    margin-top: 0px;
+    margin-left: -30px; }
 
 #howto {
   margin-top: 1024px; }
@@ -675,7 +678,9 @@ h3 {
   margin-top: 1024px; }
 
 #end {
-  margin-top: 1024px; }
+  margin-top: 1024px;
+  background-color: #ebebeb;
+  border: 0; }
 
 /***********************************************************************************************************/
 /*** Begin Type Styles  ************************************************************************************/
@@ -717,7 +722,6 @@ h1 {
   font-size: 12em;
   margin: 0;
   padding: 25px;
-  color: lime;
   margin-top: 500px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin: 0 0;
