mega margin top to hide off pages

--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -13,14 +13,14 @@
 #cover {
   h1 {
     margin-top:0px;
-    margin-left:-30px;
+    margin-left:-45px;
     }
   background-color: $page-color-dark;
   border: 0;
   } 
 
 #howto {
-	margin-top:$screen-height-px;
+	margin-top:-5000px;
 	  
   .factoid {
     width: 300px;
@@ -35,50 +35,50 @@
   width:334px;
   margin:50px;
   position: relative;
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   z-index: 1000;  
   p {color:$story-color;}    
   } 
   
 #empty {
-  margin-top:$screen-height-px;  
+  margin-top:-5000px;  
   }
 
   
 #mother {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   }
   
 #queen {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   } 
   
 #hunstman {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   } 
   
 #dwarves {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   } 
   
 #king {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   } 
   
 #sin {  
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   } 
   
 #prince {
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   }
   
 #love { 
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   }  
 
 #end {  
-  margin-top:$screen-height-px;
+  margin-top:-5000px;
   background-color: $page-color-dark;
   border: 0;
   }
