--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -26,6 +26,14 @@ body {
   position:absolute;
   width: $screen-width-px
   }
+  
+.img-button {
+	    position:absolute; 
+	    top: 100px; 
+	    left: 25px; 
+	    z-index: 5000; 
+  	  font-size: 100px;
+      }
 	
 /* .page:nth-child(odd) {border-bottom: 10px solid $page-color-dark;} */
 	
