--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -28,12 +28,16 @@ body {
   }
   
 .img-button {
-	    position:absolute; 
-	    top: 100px; 
-	    left: 25px; 
-	    z-index: 5000; 
-  	  font-size: 100px;
-      }
+  position:absolute; 
+  top: 100px; 
+  left: 25px; 
+  z-index: 5000; 
+  font-size: 24px;
+  padding: 10px;
+  background-color: $blue;
+  transform: rotate(45%);
+  -webkit-transform: rotate(45%);
+  }
 	
 /* .page:nth-child(odd) {border-bottom: 10px solid $page-color-dark;} */
 	
