--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -33,6 +33,7 @@ body {
   left: 25px; 
   z-index: 5000; 
   font-size: 24px;
+  font-weight: 900;
   padding: 10px;
   background-color: $blue;
   transform: rotate(45%);
