--- a/styles/main-slow2.css
+++ b/styles/main-slow2.css
@@ -496,6 +496,7 @@ body {
   left: 25px;
   z-index: 5000;
   font-size: 24px;
+  font-weight: 900;
   padding: 10px;
   background-color: rgba(231, 41, 0, 0.75);
   transform: rotate(45%);
