--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -17,8 +17,10 @@ body {
 	background-color: $page-color-light;
 	border-bottom: 10px solid $page-divider;	
   }
+	
+/* .page:nth-child(odd) {border-bottom: 10px solid $page-color-dark;} */
 
-.hidden-white {
+.hidden {
   display: none;
   }
   
@@ -27,20 +29,37 @@ body {
   width: $screen-width-px
   }
   
-.img-button {
-  position:absolute; 
-  top: 100px; 
-  left: 25px; 
-  z-index: 5000; 
-  font-size: 24px;
-  font-weight: 900;
-  padding: 10px;
-  background-color: $blue;
-  transform: rotate(45%);
-  -webkit-transform: rotate(45%);
+.story {
+  position:absolute;
+  margin-top: 600px;
+  left:25;
+  z-index: 4000;
   }
-	
-/* .page:nth-child(odd) {border-bottom: 10px solid $page-color-dark;} */
+  
+.button {
+  position:absolute; 
+  z-index: 5000;
+  padding: 10px;
+  border-radius: $border-radius;
+  -webkit-border-radius: $border-radius;
+  font-weight: 900;
+  }
+
+
+.img-button {
+  top: 800px; 
+  left: 60px;  
+  font-size: 24px;
+  background-color: $red;
+  }
+  
+.story-button {
+  top: 25px; 
+  right: 25px;  
+  font-size: 24px;
+  background-color: $blue;
+  }
+
 	
 .jumpto {
   bottom:25px;
@@ -61,47 +80,6 @@ body {
     }
   
   }
-  
-/*
-.button .closed {
-  background-color: $button-color;
-  width:33.333%;
-  height:90px;
-  left:33.333%;
-  top:450px;
-  }
-*/  
-
-/*
-.svg-draw {
-  fill:none;
-  stroke-width:7;
-  stroke-linecap:round;
-  stroke-linejoin:round;
-  stroke-miterlimit:4;
-  stroke-opacity:1;
-  stroke-dasharray:6000;
-  stroke-dashoffset:0;      
-  }
-*/
-  
-  .factoid {
-    background-color: $factoid-color;
-    padding:15px;  
-    p {
-      padding:0;
-      margin:0;
-      font-family: $sans-type;
-      }  
-    }
-    
-  .hidden {
-    p {display: none;}
-    }
-    
-  .revealed {
-    p {display: block;}
-    }
       
 .cutout {
   top:0px;    
