--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,7 +11,7 @@ $button-color: rgba(36,148,209,1);
 $button-text-color: rgba(36,148,209,1);
 
 $red: rgba(228,58,0,0.8);
-$blue: rgba(231,41,0,0.75);
+$blue: rgba(36,148,209,1);
 
 $factoid-color: $red;
 
@@ -20,3 +20,5 @@ $text-color: rgba(0,0,0,1);
 
 $sans-type: "Helvetica Neue", Helvetica, Arial, serif;
 $serif-type: "Arnhem", Georgia, serif;
+
+$border-radius: 4px;
