--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -31,8 +31,8 @@ body {
   
 .story {
   position:absolute;
-  margin-top: 600px;
-  left:25;
+  margin-top: 200px;
+  left:50px;
   z-index: 4000;
   }
   
