--- a/styles/main-slow.css
+++ b/styles/main-slow.css
@@ -493,8 +493,8 @@ body {
 
 .story {
   position: absolute;
-  margin-top: 600px;
-  left: 25;
+  margin-top: 200px;
+  left: 50px;
   z-index: 4000; }
 
 .button {
