--- a/styles/main-slow.css
+++ b/styles/main-slow.css
@@ -511,7 +511,7 @@ body {
   font-size: 24px;
   background-color: rgba(228, 58, 0, 0.8); }
 
-.story-button {
+#story-button {
   top: 25px;
   right: 25px;
   font-size: 24px;
