--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -31,7 +31,7 @@ body {
   
 .story {
   position:absolute;
-  margin-top: 200px;
+  top: 200px;
   left:50px;
   z-index: 4000;
   }
@@ -55,7 +55,7 @@ body {
   
 #story-button {
   top: 25px; 
-  right: 25px;  
+  left: 743px;  
   font-size: 24px;
   background-color: $blue;
   }
