--- a/styles/main-slow.css
+++ b/styles/main-slow.css
@@ -493,7 +493,7 @@ body {
 
 .story {
   position: absolute;
-  margin-top: 200px;
+  top: 200px;
   left: 50px;
   z-index: 4000; }
 
@@ -513,7 +513,7 @@ body {
 
 #story-button {
   top: 25px;
-  right: 25px;
+  left: 743px;
   font-size: 24px;
   background-color: #2494d1; }
 
