--- a/styles/main.scss
+++ b/styles/main.scss
@@ -300,8 +300,8 @@ $last_scrollstart:      $last_onscreen + 900;
   
   
 @-skrollr-keyframes story-button-scroll {    
-  #{$one_scrollstart} { margin-top: 1049px; }
-  #{$two-onscreen} { margin-top: 25px }
+  #{$one_scrollstart} { top: 1049px; }
+  #{$two-onscreen} { top: 25px }
   }
   
   
