--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -54,8 +54,9 @@ body {
   }
   
 #story-button {
+  position: fixed;
   top: 25px; 
-  left: 743px;  
+  left: 700px;  
   font-size: 24px;
   background-color: $blue;
   }
