id, not class, in js

--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -58,7 +58,14 @@ body {
   top: 25px; 
   left: 700px;  
   font-size: 24px;
-  background-color: $blue;
+  padding: 10px 20px;
+  color: $blue;
+  background: rgba(200,200,200,0.75);
+  }
+  
+#story-button:active, #story-button:hover, #story-button:press, #story-button:focus {
+  color: #fff;
+  background: $blue;
   }
 
 	
