--- a/styles/main.css
+++ b/styles/main.css
@@ -493,6 +493,7 @@ body {
 
 .story {
   position: absolute;
+  width: 300px;
   top: 200px;
   left: 50px;
   z-index: 4000; }
@@ -511,16 +512,17 @@ body {
   font-size: 24px;
   background-color: rgba(228, 58, 0, 0.8); }
 
-#story-button {
+#story-button a {
   position: fixed;
   top: 25px;
   left: 700px;
   font-size: 24px;
-  padding: 10px 20px;
+  padding: 10px 15px;
   color: #2494d1;
-  background: rgba(200, 200, 200, 0.75); }
+  background: rgba(200, 200, 200, 0.75);
+  cursor: pointer; }
 
-#story-button:active, #story-button:hover, #story-button:press, #story-button:focus {
+#story-button a:active, #story-button a:hover, #story-button a:press, #story-button a:focus {
   color: #fff;
   background: #2494d1; }
 
@@ -645,15 +647,6 @@ h3 {
     position: absolute;
     top: 400px;
     right: 0; }
-
-#story {
-  width: 334px;
-  margin: 50px;
-  position: relative;
-  margin-top: -5000px;
-  z-index: 1000; }
-  #story p {
-    color: rgba(0, 0, 0, 0.75); }
 
 #empty {
   margin-top: -5000px; }
@@ -1024,4 +1017,10 @@ h3 {
     top: 1049px; }
 
   1224 {
-    top: 25px; } }
+    top: 25px; }
+
+  19440 {
+    top: 25px; }
+
+  20464 {
+    top: -1024px; } }
