--- a/styles/main.scss
+++ b/styles/main.scss
@@ -302,7 +302,10 @@ $last_scrollstart:      $last_onscreen + 900;
 @-skrollr-keyframes story-button-scroll {    
   #{$one_scrollstart} { top: 1049px; }
   #{$one_scrolloff} { top: 25px }
+  #{$last_before} { top: 25px; }
+  #{$last_onscreen} { top: -1024px }
   }
+  
   
   
   
