--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -31,7 +31,7 @@ body {
   
 .story {
   position:absolute;
-  width: 300px;
+  width: 360px;
   top: 200px;
   left:50px;
   z-index: 4000;
@@ -53,14 +53,18 @@ body {
   background-color: $red;
   }
   
-#story-button a {
+#story-button {
   position: fixed;
   top: 25px; 
   left: 700px;  
+  color: $blue;
+  }
+  
+  #story-button a { 
   font-size: 24px;
   padding: 10px 15px;
   color: $blue;
-  background: rgba(200,200,200,0.75);
+  background: rgba(200,200,200,0.25);
   cursor: pointer;
   }
   
