STYLE, YOU BUTTON YOU

--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -67,10 +67,12 @@ a#story-button  {
   background: $blue;
   }
   
+/*
 a#story-button:active, a#story-button:hover, a#story-button:press, a#story-button:focus {
   color: $blue;
   background: rgba(200,200,200,0.25);
   }
+*/
 
 	
 .jumpto {
