--- a/styles/main.css
+++ b/styles/main.css
@@ -518,16 +518,15 @@ body {
   left: 700px;
   color: #2494d1; }
 
-#story-button a {
+a#story-button {
   font-size: 24px;
   padding: 10px 15px;
-  color: #2494d1;
-  background: rgba(200, 200, 200, 0.25);
-  cursor: pointer; }
-
-#story-button a:active, #story-button a:hover, #story-button a:press, #story-button a:focus {
   color: #fff;
   background: #2494d1; }
+
+a#story-button:active, a#story-button:hover, a#story-button:press, a#story-button:focus {
+  color: #2494d1;
+  background: rgba(200, 200, 200, 0.25); }
 
 .jumpto {
   bottom: 25px;
