break apart image buttons

--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -20,19 +20,18 @@
   } 
 
 #howto {
-	margin-top:-5000px;
-	  
-  .factoid {
-    width: 300px;
-    position: absolute;
-    top:400px;
-    right:0;  
-    }
+	margin-top:-5000px;  
+  .img-button-hand {  
+    top: inherit; 
+    left: inherit; }
   }
 
   
 #empty {
   margin-top:-5000px;  
+  .img-button-eyes {  
+    top: inherit; 
+    left: inherit; }
   }
 
   
@@ -42,14 +41,23 @@
   
 #queen {
   margin-top:-5000px;
+  .img-button-crown {  
+    top: inherit; 
+    left: inherit; }
   } 
   
 #hunstman {
   margin-top:-5000px;
+  .img-button-knife {  
+    top: inherit; 
+    left: inherit; }
   } 
   
 #dwarves {
   margin-top:-5000px;
+  .img-button-crowd {  
+    top: inherit; 
+    left: inherit; }
   } 
   
 #king {
@@ -62,6 +70,9 @@
   
 #prince {
   margin-top:-5000px;
+  .img-button-death {  
+    top: inherit; 
+    left: inherit; }
   }
   
 #love { 
