--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -22,7 +22,7 @@
 #howto {
 	margin-top:-5000px;  
   .img-button-hand {  
-    top: inherit; 
+    top: 999px; 
     left: inherit; }
   }
 
@@ -30,7 +30,7 @@
 #empty {
   margin-top:-5000px;  
   .img-button-eyes {  
-    top: inherit; 
+    top: 999px; 
     left: inherit; }
   }
 
@@ -42,21 +42,21 @@
 #queen {
   margin-top:-5000px;
   .img-button-crown {  
-    top: inherit; 
+    top: 999px; 
     left: inherit; }
   } 
   
 #hunstman {
   margin-top:-5000px;
   .img-button-knife {  
-    top: inherit; 
+    top: 999px; 
     left: inherit; }
   } 
   
 #dwarves {
   margin-top:-5000px;
   .img-button-crowd {  
-    top: inherit; 
+    top: 999px; 
     left: inherit; }
   } 
   
