--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -40,7 +40,6 @@ body {
 .button {
   position:absolute; 
   z-index: 5000;
-  padding: 10px;
   border-radius: $border-radius;
   -webkit-border-radius: $border-radius;
   font-weight: 900;
@@ -50,7 +49,10 @@ body {
   top: 800px; 
   left: 60px;  
   font-size: 24px;
-  background-color: $red;
+  background-image: url("../img/img-open.png");
+/*   background-color: $red; */
+  width: 80px;
+  height:50px;
   }
   
 #story-button {
