--- a/styles/main-noskrollr.scss
+++ b/styles/main-noskrollr.scss
@@ -1,6 +1,14 @@
 @import "fixed-positioning";
 @import "pages";
 
+.tap-image {
+  top:0; margin-top:0 !important;
+  z-index: 0 !important;
+  }
+  
+h1, h2, h3 {
+  z-index: 5000 !important;    
+  }
   
   
 
